<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/screen_padding">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bill_value_layout"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/initial_margin_top"
            app:boxBackgroundColor="?attr/colorSurface"
            app:endIconDrawable="@drawable/round_cancel_24"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/round_paid_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bill_value_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:maxLength="9"
                android:maxLines="1"
                android:paddingVertical="@dimen/padding_vertical"
                android:textAlignment="center"
                android:textSize="@dimen/input_text_size"
                android:textStyle="bold"
                tools:text="R$ 0,00" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/how_was_service_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/initial_margin_top"
            android:text="@string/como_foi_o_servico"
            android:textColor="?attr/colorOnBackground"
            android:textSize="@dimen/text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bill_value_layout" />

        <RadioGroup
            android:id="@+id/percentage_options_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin_top"
            android:checkedButton="@id/twenty_percentage_radio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/how_was_service_text">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/twenty_percentage_radio"
                style="@style/RadioStyle"
                android:text="@string/excelente" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/fifteen_percentage_radio"
                style="@style/RadioStyle"
                android:text="@string/bom" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/ten_percentage_radio"
                style="@style/RadioStyle"
                android:text="@string/marromeno" />
        </RadioGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tip_value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/great_margin_top"
            android:drawableStart="@drawable/round_paid_24"
            android:drawablePadding="@dimen/small_padding"
            android:drawableTint="?attr/colorPrimary"
            android:textColor="?attr/colorOnBackground"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/percentage_options_group"
            tools:text="Valor da gorjeta: R$ 10" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calculate_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/calcular"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tip_value_text" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/round_up_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:drawableStart="@drawable/round_trending_up_24"
            android:drawablePadding="@dimen/small_padding"
            android:drawableTint="?attr/colorPrimary"
            android:text="@string/arredondar_para_cima"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculate_button"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

